Version 0.10 "Antigua" -- Subversion
-----------------

* Added dropdown of encodings to add/edit template pages
* Added multiple content blocks
* Added recursive html blobs
* Submitting site prefernces redircts to an empty page now
* Fixed bug with text parameter in print plugin
* Updated ADODB to 4.61

Version 0.9.2 "Hatutu" -- Fri Feb 25 2005
-----------------

* Fixed bug in site preference loading

Version 0.9.1 "Mohotani" -- Fri Feb 25 2005
-----------------

* Added collapse option to bulletmenu, for cases where section header
is used as parents for other content
* Added apply button to edit css
* Added LoadUsersByGroup() function (sjg)
* Added user and group classes to be loaded by default in include.php
* Changed new default install schema (BrumalPat)
* Changed breadcrumbs plugin to use menu text instead of title
* Fixed CreateTextInput and CreateTextHidden to change " to &quot; in 
value
* Fixed bug with call to post render hook
* Fixed nasty bug where content would have properties deleted if set
inactive
* Fixed bug with files.php trying to define cmsmodule more than once
* Fixed permission check for setting active flag on content
* Fixed automated module upgrades by making AllowAutoUpgrade() function
return TRUE by defualt instead of FALSE (which is correct)
* Fixed ibrowser in ImageManager to handle subdirectories properly (sjg)
* Removed a rogue debug message
* Removed the advanced css option.  It's on all the time now.
* Updated some text in INSTALL and UPGRADE docs

Version 0.9 "Marquesas" -- Tue Feb 22 2005
-----------------

* Rewrote module API from scratch to make it easier for a module
dev to write modules.  Not only is it now object oriented, it is
also better organized and navigations related functions are
much, much easier.
* Stylesheet URL is now absolute based on root_url in config.php
* Fixed bug with content type changes breaking hierarchy (#000090)
* Fixed bug with start_element in bulletmenu and phplayers